--- a/about.html
+++ b/about.html
@@ -107,5 +107,5 @@
   <a href="https://twitter.com" class="fa fa-twitter"></a>
   <a href="https://www.instagram.com" class="fa fa-instagram"></a>
 </footer>
-</body>
+</body> P
 </html> p 
