--- a/about.html
+++ b/about.html
@@ -105,7 +105,7 @@
 <footer>
   <a href="https://www.facebook.com" class="fa fa-facebook"></a>
   <a href="https://twitter.com" class="fa fa-twitter"></a>
-  <a href="https://www.instagram.com" class="fa fa-instagram"></a>
+  <a href="https://www.instagram.com" class="fa fa-instagram"></a> p
 </footer>
 </body> 
 </html> 
