--- a/about.html
+++ b/about.html
@@ -1,111 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Golden gate soccer club</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-   header {
-        background-color: red;
-        text-align: center;
-        padding: 30px; 
-        font-size: 20px;
-        word-spacing: 30px;
-        position:relative;
-    }
-    .Logo {
-        position: absolute;
-        top: 0px;
-        left: 0px;
-    }
-    header a {
-        text-decoration-color: white;
-        color: white;
-    }
-    header a:hover {
-        text-decoration-color: black;
-        color: black;
-    }
-    body {
-        margin: 0;
-    }
-    .container {
-      position:relative;
-    }
-    iframe {
-      position: absolute;
-      top: 30px;
-      left: 20px;
-      width: 450px;
-      height: 350px;
-    }
-    
-    .About {
-      position: absolute;
-      top: 80%;
-      left: 50%;
-      text-align: center;
-      transform: translate(-50%, -50%);
-      background-color: red;
-      width: 100%;
-      color: white;
-      font-size: 20px;
-    }
-    footer {
-        background-color: black;
-        padding: 75px; 
-        margin-top: -4px;
-        text-align: center;
-        word-spacing: 20px;
-    }
-    .fa:hover {
-    opacity: 0.5;
-}
-    .fa {
-  padding: 10px;
-  font-size: 30px;
-  width: 30px;
-  text-align:center;
-  text-decoration: none;
-  border-radius: 50%;
-    }
-    .fa-facebook {
-  background: #3B5998;
-  color: white;
-    }
-    .fa-twitter {
-  background: #55ACEE;
-  color: white;
-    }
-    .fa-instagram {
-  background: #125688;
-  color: white;
-    }
-</style>
+  <link rel="stylesheet" href="css folder/about.css">
+
 </head>
+
 <body>
-  <header class="Header">
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
-</header>
-<a href="index.html"><img src="./img folder/Logo.png" alt="Logo" width="132" height="80" class="Logo">
-</a>
-<div class="container">
-  <img src="./img folder/About.jpg" alt="Ball" width="100%">
-  <iframe src="https://www.youtube.com/embed/ECospNT9yCM" class="video">
-  </iframe>
-  <div class="About">
-    <h1>About us</h1>
-    <p>Our mission is to give young boys and girls a chance to improve their soccer skills and have fun on the field!</p>
-  </div> 
-</div>
-<footer>
-  <a href="https://www.facebook.com" class="fa fa-facebook"></a>
-  <a href="https://twitter.com" class="fa fa-twitter"></a>
-  <a href="https://www.instagram.com" class="fa fa-instagram"></a> 
-</footer>
-</body> 
-</html> 
+  <header>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
+  <a href="index.html"><img src="./img folder/Logo.png" alt="Logo" width="132" height="80" class="Logo">
+  </a>
+  <div class="container">
+    <img src="./img folder/About.jpg" alt="Ball" width="100%">
+    <iframe src="https://www.youtube.com/embed/ECospNT9yCM" class="video">
+    </iframe>
+    <div class="About">
+      <h1>About us</h1>
+      <p>Our mission is to give young boys and girls a chance to improve their soccer skills and have fun on the field!
+      </p>
+    </div>
+  </div>
+  <footer>
+    <a href="https://www.facebook.com" class="fa fa-facebook"></a>
+    <a href="https://twitter.com" class="fa fa-twitter"></a>
+    <a href="https://www.instagram.com" class="fa fa-instagram"></a>
+  </footer>
+</body>
+
+</html>
