--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <p style="font-size:25px;">Youth soccer team in the Bay Area</p>
     </div>
     <div class="Sign-up">
-        <p class="Players">You can register by filling out the form in the contact page. We accept players between the
+        <p class="Players">You can sign up by filling out the form in the contact page. We accept players between the
             ages of 15 and 24 years old</p>
     </div>
     <div class="Playing">
