--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 <body>
   <header>
     <nav>
-      <a href="index.html">Home</a>
+      <a href="/">Home</a>
       <a href="about.html">About</a>
       <a href="contact.html">Contact</a>
     </nav>
