changed index.html to /

--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
             <a href="contact.html">Contact</a>
         </nav>
     </header>
-    <a href="index.html"><img src="./img folder/Logo.png" alt="Logo" width="132" height="80" class="Logo">
+    <a href="/"><img src="./img folder/Logo.png" alt="Logo" width="132" height="80" class="Logo">
     </a>
     <div>
         <div class="form">
