--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="contact.html">Contact</a>
         </nav>
     </header>
-    <a href="index.html"><img src="./img folder/Logo.png" alt="Logo" width="132" height="80" class="Logo">
+    <a href="/"><img src="./img folder/Logo.png" alt="Logo" width="132" height="80" class="Logo">
     </a>
     <img src="./img folder/Goalie.jpg" alt="Goalie making a save" width="100%" class="Goalie">
     <div class="Heading1">
