--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
       <a href="contact.html">Contact</a>
     </nav>
   </header>
-  <a href="index.html"><img src="./img folder/Logo.png" alt="Logo" width="132" height="80" class="Logo">
+  <a href="/"><img src="./img folder/Logo.png" alt="Logo" width="132" height="80" class="Logo">
   </a>
   <div class="container">
     <img src="./img folder/About.jpg" alt="Ball" width="100%">
