--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 <body>
     <header>
         <nav>
-            <a href="/">Home</a>
+            <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
         </nav>
     </header>
-    <a href="/"><img src="./img folder/Logo.png" alt="Logo" width="132" height="80" class="Logo">
+    <a href="index.html"><img src="./img folder/Logo.png" alt="Logo" width="132" height="80" class="Logo">
     </a>
     <img src="./img folder/Goalie.jpg" alt="Goalie making a save" width="100%" class="Goalie">
     <div class="Heading1">
