--- a/about.html
+++ b/about.html
@@ -14,12 +14,12 @@
 <body>
   <header>
     <nav>
-      <a href="/">Home</a>
+      <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="contact.html">Contact</a>
     </nav>
   </header>
-  <a href="/"><img src="./img folder/Logo.png" alt="Logo" width="132" height="80" class="Logo">
+  <a href="index.html"><img src="./img folder/Logo.png" alt="Logo" width="132" height="80" class="Logo">
   </a>
   <div class="container">
     <img src="./img folder/About.jpg" alt="Ball" width="100%">
