--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <a href="contact.html">Contact</a>
         </nav>
     </header>
-    <a href="index.html"><img src="./img folder/Logo.png" alt="Logo" width="132" height="80" class="Logo">
+    <a href="index.html"><img src="./imgfolder/Logo.png" alt="Logo" width="132" height="80" class="Logo">
     </a>
-    <img src="./img folder/Goalie.jpg" alt="Goalie making a save" width="100%" class="Goalie">
+    <img src="./imgfolder/Goalie.jpg" alt="Goalie making a save" width="100%" class="Goalie">
     <div class="Heading1">
         <h1>Golden Gate Soccer Club</h1>
         <p style="font-size:25px;">Youth soccer team in the Bay Area</p>
@@ -30,13 +30,14 @@
             ages of 15 and 24 years old</p>
     </div>
     <div class="Playing">
-        <img src="./img folder/Playing.jpg" alt="Playing soccer" width="100%">
+        <img src="./imgfolder/Playing.jpg" alt="Playing soccer" width="100%">
     </div>
     <footer>
         <a href="https://www.facebook.com" class="fa fa-facebook"></a>
         <a href="https://twitter.com" class="fa fa-twitter"></a>
         <a href="https://www.instagram.com" class="fa fa-instagram"></a>
     </footer>
+<script src="fcc.js"></script> 
 </body>
 
 </html>
